services/nifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nifi
  type: NodePort
